"""The parameters of the Simulation."""

class SimulationParameters:

    """The parameters of the Simulation."""

    def __init__(self, filename):
        """Create the parameters from file."""

