"""SimulationTerminal."""

class SimulationTerminal:

    """Terminal View of Simulation."""
